bin: reset the EOS detection machinery after sending an EOS message

This will allow detecting further EOS, for instance after looping
a stream without changing states.

https://bugzilla.gnome.org/show_bug.cgi?id=668289